--- a/test/index.html
+++ b/test/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -7,25 +8,33 @@
 </head>
 <body>
     <div id="mocha"></div>
+    <!-- Test Libraries -->
     <script src="lib/mocha/mocha.js"></script>
-    <script>mocha.setup('bdd')</script>
-    <!-- assertion framework -->
     <script src="lib/chai.js"></script>
-    <script>var expect = chai.expect</script>
     <script src="lib/sinon.js"></script>
-    <!-- include source files here... -->
-    <script src="../app/bower_components/jquery/jquery.js"></script>
-    <script src="../app/bower_components/underscore/underscore.js"></script>
-    <script src="../app/bower_components/backbone/backbone.js"></script>
-    <!--<script src="../app/bower_components/backbone.localeStorage.js"></script>-->
-    <script src="../app/bower_components/markdown/markdown.js"></script>
-    <!-- include spec files here... -->
-    <script src="spec/test-one.js"></script>
-    <script src="spec/test.js"></script>
+    <!-- Core JS Libraries -->
+    <script src="../app/bower_components/jquery/jquery.min.js"></script>
+    <script src="../app/bower_components/underscore/underscore-min.js"></script>
+    <script src="../app/bower_components/backbone/backbone-min.js"></script>
+    <!-- Will be utilizing Parse or a RESTful API set up -->
+    <script src="../app/bower_components/backbone.localStorage.js"></script>
+    <script src="../app/bower_components/sass-bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../app/bower_components/showdown.js"></script>
+    <!-- JS Application Libraries -->
+    <script src="../app/scripts/app/namespace.js"></script>
+    <script src="../app/scripts/app/models/core.model.js"></script>
+    <!-- Set up Mocha and Chai -->
     <script>
+        mocha.setup('bdd');
+        var expect = chai.expect;
         window.onload = function() {
             mocha.run();
         }  
     </script>
+    <!-- Specs... --> 
+    <script src="spec/test.js"></script>
+    <script src="spec/namespace.spec.js"></script>
+    <script src="spec/models/core.model.spec.js"></script>
+    <script src="spec/models/bdd.spec.js"></script>
 </body>
 </html>
